[package]
name = "lattice-rust"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lattice_rust"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init_if_needed = ["anchor-lang/init-if-needed"]

[dependencies]
chrono = "0.4.38"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sha2 = "0.10.8"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "1.18.12"
hex = "0.4.3"
